# cmake-multibuild

./: .gitignore  .gitmodules  AUTHORS  LICENSE
cmake/: default.defines.cmake  multibuild.cmake
example/: CMakeLists.txt
